# Research-and-Development

./: README.md
Drone Communication/: readme.md
Drone Communication/Piyush/: README.md  Summary.txt  drone_a.py  drone_b.py  drone_gui.py
Drone Communication/Saksham/ROS Implementation (Movement Not Integrated)/drone_ws/install/: local_setup.sh  setup.sh
Drone Communication/Saksham/ROS Implementation (Movement Not Integrated)/drone_ws/install/drone_sim/lib/drone_sim/: realtime_comm_node
Drone Communication/Saksham/ROS Implementation (Movement Not Integrated)/drone_ws/install/drone_sim/share/drone_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Drone Communication/Saksham/ROS Implementation (Movement Not Integrated)/drone_ws/log/: latest_build
Drone Communication/Saksham/ROS Implementation (Movement Not Integrated)/drone_ws/src/drone_sim/: package.xml  setup.py
Drone Communication/Saksham/ROS Implementation (Movement Not Integrated)/drone_ws/src/drone_sim/drone_sim/: comm_node.py  move_node.py  realtime_comm_node.py  receive_node.py
Drone Communication/Saksham/ROS Implementation (Movement Not Integrated)/drone_ws/src/drone_sim/launch/: multi_drone_launch.py
Drone Communication/Saksham/ROS Implementation (Movement Not Integrated)/drone_ws/src/drone_sim/sdf/: drone_a.sdf  drone_b.sdf  empty_world.sdf
Drone Communication/Saksham/ROS Implementation (Movement Not Integrated)/drone_ws/src/drone_sim/test_inputs/: drone_a_comm.txt  drone_a_move.txt  drone_b_comm.txt  drone_b_move.txt
Types of Imaging/: README.md
(+2 files in other folders)
