<?xml version="1.0"?>
<package format="3">
  <name>drone_sim</name>
  <version>0.0.1</version>
  <description>Drone simulation package for multi-drone communication</description>
  <maintainer email="khandelwalsaksham2105@gmail.com">Saksham Khandelwal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
